--- a/views/main.ejs
+++ b/views/main.ejs
@@ -1,1 +1,10 @@
-<h2><%= name %></h2>
+<%- include('parts/html-head') %> 
+<%- include('parts/navbar') %> 
+
+<div class="container">
+    <h2><%= name %> </h2>
+</div>
+
+<%- include('parts/script') %>
+<%- include('parts/html-foot') %>
+
