--- a/views/parts/navbar.ejs
+++ b/views/parts/navbar.ejs
@@ -19,7 +19,7 @@
             <a class="nav-link" href="/json-sales2">json-sales2</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/address-book">ad Link</a>
+            <a class="nav-link" href="/address-book">ab Link</a>
           </li>
 
         </ul>
