新增資料的表單1

--- a/views/parts/navbar.ejs
+++ b/views/parts/navbar.ejs
@@ -22,6 +22,10 @@
             <a class="nav-link" href="/address-book/">ab Link</a>
           </li>
 
+          <li class="nav-item">
+            <a class="nav-link" href="/address-book/add">新增通訊錄</a>
+          </li>
+
         </ul>
 
       </div>
