--- a/views/ab-add.ejs
+++ b/views/ab-add.ejs
@@ -1,60 +1,91 @@
-<%- include('parts/html-head') %> 
-<%- include('parts/navbar') %> 
+<%- include('parts/html-head') %> <%- include('parts/navbar') %>
 
-<div class="container  ms-auto me-auto">
-    <div class="row ">
-        <div class="col">
-            <div class="card" style="width: 18rem;">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <form name="form1" onsubmit="postForm(event)">
-                    <div class="mb-3">
-                      <label for="name" class="form-label">Name</label>
-                      <input type="text" class="form-control" id="name" name="name">
-                      <div class="form-text"></div>
-                    </div>
-                    <div class="mb-3">
-                      <label for="email" class="form-label">Email</label>
-                      <input type="email" class="form-control" id="email" name="email">
-                      <div class="form-text"></div>
-                    </div>
-                    <div class="mb-3">
-                        <label for="moblie" class="form-label">Moblie</label>
-                        <input type="text" class="form-control" id="moblie" name="moblie" pattern="09\d{2}-?\d{3}-?\d{3}-?">
-                        <div class="form-text"></div>
-                    </div>
-                    <div class="mb-3">
-                      <label for="birthday" class="form-label">Birthday</label>
-                      <input type="date" class="form-control" id="birthday" name="birthday">
-                      <div class="form-text"></div>
-                    </div>
-                    <div class="mb-3">
-                      <label for="address" class="form-label">Address</label>
-                      <textarea class="form-control" id="address" name="address" cols="30" rows="3"></textarea>
-                    </div>
+<div class="container">
+  <div class="row">
+    <div class="col-6">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">新增資料</h5>
+          <form name="form1" onsubmit="postForm(event)">
+            <div class="mb-3">
+              <label for="name" class="form-label">姓名</label>
+              <input type="text" class="form-control" id="name" name="name" />
+              <div class="form-text"></div>
+            </div>
+            <div class="mb-3">
+              <label for="email" class="form-label">email</label>
+              <input
+                type="email"
+                class="form-control"
+                id="email"
+                name="email"
+              />
+              <div class="form-text"></div>
+            </div>
+            <div class="mb-3">
+              <label for="mobile" class="form-label">mobile</label>
+              <input
+                type="text"
+                class="form-control"
+                id="mobile"
+                name="mobile"
+                pattern="09\d{2}-?\d{3}-?\d{3}"
+              />
+              <div class="form-text"></div>
+            </div>
+            <div class="mb-3">
+              <label for="birthday" class="form-label">birthday</label>
+              <input
+                type="date"
+                class="form-control"
+                id="birthday"
+                name="birthday"
+              />
+              <div class="form-text"></div>
+            </div>
+            <div class="mb-3">
+              <label for="address" class="form-label">address</label>
+              <textarea
+                class="form-control"
+                id="address"
+                name="address"
+                cols="30"
+                rows="3"
+              ></textarea>
 
-                    <button type="submit" class="btn btn-primary">Submit</button>
-                  </form>
-                </div>
-              </div>
+              <div class="form-text"></div>
+            </div>
+
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </form>
         </div>
+      </div>
     </div>
+  </div>
 </div>
-
-<%- include('parts/script') %>
+<%- include('parts/script') %> 
 <script>
-    function postForm(event){
-        event.preventDefault();
-        const fd = new FormData(document.form1);
+  function postForm(event){
+    event.preventDefault();
 
-        fetch('', {
-            method:'POST',
-            body:fd
-        }).then(r => r.json())
-        .then(data => {
-            console.log(data);
-        });
-    }
+    const fd = new FormData(document.form1);
+
+    fetch('', {
+      method: 'POST',
+      body: fd
+    })
+      .then(r=>r.json())
+      .then(data=>{
+        console.log(data);
+      });
+
+
+
+
+
+  }
+
+
 </script>
-<%- include('parts/html-foot') %>
 
+<%- include('parts/html-foot') %>
