--- a/views/ab-add.ejs
+++ b/views/ab-add.ejs
@@ -68,6 +68,7 @@
   function postForm(event){
     event.preventDefault();
 
+    // TODO: 資料檢查
     const fd = new FormData(document.form1);
 
     fetch('', {
@@ -77,6 +78,12 @@
       .then(r=>r.json())
       .then(data=>{
         console.log(data);
+        if(data.success){
+          alert('新增成功');
+          location.href = '/address-book';
+        } else {
+          alert('新增失敗');
+        }
       });
 
 
