--- a/views/ab-list.ejs
+++ b/views/ab-list.ejs
@@ -22,23 +22,35 @@
       <table class="table table-striped">
         <thead>
           <tr>
+            <td>
+              <i class="fa-solid fa-trash-can"></i>
+            </td>
             <th scope="col">#</th>
             <th scope="col">姓名</th>
             <th scope="col">email</th>
             <th scope="col">手機</th>
             <th scope="col">生日</th>
             <th scope="col">地址</th>
+            <td>
+                <i class="fa-solid fa-pen-to-square"></i>
+            </td>
           </tr>
         </thead>
         <tbody>
           <% for(let r of rows){ %>
           <tr>
+            <td><a href=""><i class="fa-solid fa-trash-can"></i></a></td>
             <td><%= r.sid %></td>
             <td><%= r.name %></td>
             <td><%= r.email %></td>
             <td><%= r.mobile %></td>
             <td><%= toDateString(r.birthday) %></td>
             <td><%= r.address %></td>
+            <td>
+              <a href="">
+                <i class="fa-solid fa-pen-to-square"></i>
+              </a>
+            </td>
           </tr>
           <% } %>
         </tbody>
