get db table value

--- a/views/ab-list.ejs
+++ b/views/ab-list.ejs
@@ -47,7 +47,7 @@
             <td><%= toDateString(r.birthday) %></td>
             <td><%= r.address %></td>
             <td>
-              <a href="<%= baseUrl %>/edit?sid=<%= r.sid %>">
+              <a href="<%= baseUrl %>/edit/<%= r.sid %>">
                 <i class="fa-solid fa-pen-to-square"></i>
               </a>
             </td>
