select change page and qureystring URLSearchParams

--- a/views/ab-list.ejs
+++ b/views/ab-list.ejs
@@ -9,15 +9,15 @@
   <div class="row">
     <div class="col">
       <nav aria-label="Page navigation example" class="d-flex justify-content-between align-items-center">
-        <ul class="pagination d-flex justify-content-center align-items-center m-2">
+        <ul class="pagination d-flex justify-content-center align-items-center mt-3">
           <% for(let i=page-5; i<=page+5; i++) 
           if(i>=1 && i<=totalPages){ %>
           <li class="page-item <%= i==page ? 'active' : '' %>">
-            <a class="page-link" href="?page=<%= i %>"><%= i %></a>
+            <a class="page-link" href="javascript: gotoPage(<%= i %>)"><%= i %></a>
           </li>
           <% } %>
         </ul>
-        <form class="d-flex justify-content-center" role="search">
+        <form class="d-flex" role="search">
             <input class="form-control me-2" type="search" name="search" placeholder="Search">
           <button class="btn btn-outline-success" type="submit">Search</button>
           </form>
@@ -67,6 +67,16 @@
 </div>
 <%- include('parts/script') %>
 <script>
+  const usp = new URLSearchParams(location.search);
+  const searchInput = document.querySelector('input[name=search]');
+  if(usp.get('search')){
+    // 把搜尋的關鍵字放入搜尋欄位
+    searchInput.value = usp.get('search')
+  }
+  const gotoPage = (page) => {
+    usp.set('page',page)
+    location.href = '?' + usp.toString();
+  }
     function deleteitem(sid){
       if(! confirm(`確定要刪除編號為${sid}的資料嗎?`)){
         return;
