--- a/views/ab-list.ejs
+++ b/views/ab-list.ejs
@@ -10,6 +10,16 @@
     <div class="col">
       <nav aria-label="Page navigation example" class="d-flex justify-content-between align-items-center">
         <div class="col">
+          <ul class="pagination d-flex justify-content-center align-items-center mt-3">
+            <% for(let i=page-5; i<=page+5; i++) 
+            if(i>=1 && i<=totalPages){ %>
+            <li class="page-item <%= i==page ? 'active' : '' %>">
+              <a class="page-link" href="javascript: gotoPage(<%= i %>)"><%= i %></a>
+            </li>
+            <% } %>
+          </ul>
+        </div>
+        <div class="col ms-3">
           <select class="form-select" id="orderby" onchange="changeParams()">
             <option value="sid_asc">預設(編號升冪)</option>
             <option value="sid_desc">編號降冪</option>
@@ -22,16 +32,6 @@
             <input class="form-control me-2" type="search" name="search" placeholder="Search">
             <button class="btn btn-outline-success" type="submit">Search</button>
           </form>
-        </div>
-        <div class="col">
-          <ul class="pagination d-flex justify-content-center align-items-center mt-3">
-            <% for(let i=page-5; i<=page+5; i++) 
-            if(i>=1 && i<=totalPages){ %>
-            <li class="page-item <%= i==page ? 'active' : '' %>">
-              <a class="page-link" href="javascript: gotoPage(<%= i %>)"><%= i %></a>
-            </li>
-            <% } %>
-          </ul>
         </div>
       </nav>
     </div>
