login 表單 and session setting

--- a/views/parts/navbar.ejs
+++ b/views/parts/navbar.ejs
@@ -27,6 +27,24 @@
           </li>
 
         </ul>
+        <ul class="navbar-nav mb-2 mb-lg-0">
+          <% if(locals.session && session.user){ %>
+          <li class="nav-item">
+            <a class="nav-link">登入的會員</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/logout">登出</a>
+          </li>
+          <% } else { %>
+          <li class="nav-item">
+            <a class="nav-link" href="/login">登入</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/register">註冊</a>
+          </li>
+
+          <% } %>
+        </ul>
 
       </div>
     </div>
